Fix dropdown z-index levels

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -16,7 +16,7 @@
   --light-color: var(--ctp-latte-base);
 
   --shadow: 0.1rem 0.25rem 2rem 0.1rem rgba(0, 0, 0, 0.2);
-
+  --z-dropdown: 50;
   --icon-size: 1.5rem;
 }
 
