--- a/src/styles/components/_dropdown.scss
+++ b/src/styles/components/_dropdown.scss
@@ -2,6 +2,7 @@
 
 .dropdown {
   position: relative;
+  z-index: var(--z-dropdown);
 }
 
 .dropdown aside {
